# PHM

./: .tags  CMakeLists.txt  LICENSE.txt  README.md  build.bat  phm.hpp
Math/: Constants.hpp
NumberSystems/: Basic.hpp  Complex.hpp  Quaternion.hpp  README.txt
PHM/: CMakeLists.txt  phm.cpp  phm.hpp  type_vec2.hpp  type_vec3.hpp
Tensor/: tensor.hpp  tensorOp.hpp
Tensor/Internal/: swizzle_proxy.hpp
Tensor/Matrix/: matrix.hpp
Tensor/Scalar/: scalar.hpp
Tensor/Vector/: vec2.hpp  vec3.hpp
buildGCC/: CMakeCache.txt
buildScripts/: buildGCC_Debug.bat  buildGCC_Debug.sh  buildGCC_Release.bat  buildGCC_Release.sh  buildVS2015.bat  cleanGCC.bat  cleanGCC.sh
cmake/Libraries/msvc14/x64/gtest-1.7/lib/Re/: gtest.lib
cmake/Modules/: FindASSIMP.cmake  FindGTEST.cmake  FindSDL2.cmake  FindWWISE.cmake  macros.cmake  setlibloc.cmake
src/: CMakeLists.txt
src/PHM/: CMakeLists.txt  phm.cpp  phm.hpp  type_mat.hpp  type_selector.h  type_vec.hpp
src/PHM/Math/: CMakeLists.txt  Constants.hpp  Function.hpp
src/PHM/Tensor/: CMakeLists.txt  README.txt  tensor.hpp
src/PHM/Tensor/Internal/: swizzle_proxy.hpp  tensor_internal.hpp
src/PHM/Tensor/Matrix/: matrix.hpp
src/PHM/Tensor/Scalar/: scalar.hpp
src/PHM/Tensor/Static/: tensor.hpp
src/PHM/Tensor/Static/Internal/: tensor_internal.hpp
src/PHM/Tensor/Static/Matrix/: matrix.hpp
src/PHM/Tensor/Static/Scalar/: scalar.hpp
src/PHM/Tensor/Static/Vector/: vector.hpp  vector2.hpp
src/PHM/Tensor/Vector/: vector.hpp
src/PHM/Vector/: AffineTransform.h  AffineTransform.hpp  type_mat.hpp  type_selector.h  type_vec.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp  vector_basics.h
src/PHM/Vector/Swizzle/: vector_base_data.hpp  vector_conversion_proxy.hpp  vector_swizzle_proxy.hpp
src/UnitTests/: CMakeLists.txt  GoogleTest.cpp  main.cpp  mathTesting.h
